Overflow issue fixed

--- a/styles/app.css
+++ b/styles/app.css
@@ -167,7 +167,7 @@ h5 {
 }
 
 .menu {
-    padding: 10px;
+    padding-top: 10px;
     color: #fff;
     text-align: center;
 }
